<resources>
    <string name="app_name">gymquizapp</string>
    <string name="dumbbell_icon_description">dumbbell icon description</string>
    <string name="login_start_button_description">login start button description</string>
    <string name="return_icon_description">return icon</string>
    <string name="question_image_description">question image</string>
    <string name="resultTitle">Parabéns! Você concluiu o Canale\'s Gym Quiz!</string>
    <string name="resultIconDescription">result icon description.</string>
    <string name="resultSummary">De acordo com nossos cálculos... vocé é um...</string>
    <string name="finish">Finalizar</string>
    <string name="tryAgain">Retentar</string>
    <string name="welcomeTitle">Bem vindo(a) ao Canale\'s Gym Quiz!</string>
    <string name="loginCardTitle">Para iniciar o quiz é preciso informar seu nível de experiência na área</string>
    <string name="warning_message_icon_description">warning message icon description</string>
    <string name="warning">Aviso!</string>
    <string name="success">Sucesso!</string>
    <string name="capital_resume">PROSSEGUIR</string>
    <string name="capital_okay">OK</string>
    <string name="warning_message_body">As perguntas do quiz podem aprensentar certa dificuldade de acordo com seu nível de experiência no assunto...</string>
    <string name="warning_message_title">Deseja continuar?</string>
    <string name="success_message_title">Você vai se dar bem!</string>
    <string name="success_message_body">Com a sua grande experiência no assunto, vai conseguir tirar de letra!</string>
    <string name="quit">Desistir</string>
    <string name="proceed">Prosseguir</string>
    <string name="careful">Cuidado!</string>
    <string name="hit">Sucesso</string>
    <string name="reset_icon">reset icon</string>
    <string name="error">Erro!</string>
    <string name="error_occurred">Ocorreu um erro</string>
    <string name="not_answered_question">Questão em branco</string>
    <string name="not_possible_to_load_result">Não foi montar a tela de resultado final.</string>
    <string name="resultShower">%1$d de 10</string>

    <string-array name="user_experience_levels">
        <item>Iniciante</item>
        <item>Intermediário</item>
        <item>Bodybuilder</item>
    </string-array>
</resources>