<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity"
    android:background="@color/secondary"
    android:padding="32dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_dumbbell"
        android:contentDescription="@string/dumbbell_icon_description"
        app:tint="@color/primary"
        android:layout_marginTop="48dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/red_title_h1"
        android:text="@string/welcomeTitle"
        android:textAlignment="center"
        android:layout_marginVertical="56dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rounded_tertiary"
        android:padding="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginCardTitle"
                android:textAlignment="center"
                style="@style/quaternary_title_h2"
                android:layout_marginBottom="32dp"/>

                <Spinner
                    android:id="@+id/experienceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/bg_spinner_rounded"/>

            <ImageButton
                android:id="@+id/playButton"
                android:layout_width="64dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_rounded_quaternary"
                android:contentDescription="@string/login_start_button_description"
                android:src="@drawable/ic_play"
                app:tint="@color/primary" />
    </LinearLayout>
</LinearLayout>