<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/secondary"
    tools:context=".activity.ResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="64dp"
        android:theme="@style/red_title_h1"
        android:textAlignment="center"
        android:text="@string/resultTitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_rounded_tertiary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="48dp"
        android:paddingVertical="24dp">

        <TextView
            android:id="@+id/resultShower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:theme="@style/quaternary_title_h1"
            tools:text="0 de 0" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textAlignment="center"
            android:theme="@style/quaternary_title_h2"
            android:text="@string/resultSummary" />

        <TextView
            android:id="@+id/userDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:theme="@style/quaternary_title_h1"
            tools:text="Bodybuilder!" />

        <ImageView
            android:id="@+id/userDescriptionImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/return_icon_description"
            app:tint="@color/quaternary"
            tools:src="@drawable/ic_bodybuilder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/restartButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:drawableEnd="@drawable/ic_reload"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/primary"
            android:drawableTint="@color/quaternary"
            android:text="@string/tryAgain"/>

        <Button
            android:id="@+id/finishButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:drawableEnd="@drawable/ic_cancel"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/primary"
            android:drawableTint="@color/quaternary"
            android:text="@string/finish"/>

    </LinearLayout>
</LinearLayout>