<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QuestionActivity"
    android:background="@color/secondary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingTop="32dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/returnButton"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/return_icon_description"
            android:src="@drawable/ic_back"
            app:tint="@color/quaternary" />

        <TextView
            android:id="@+id/questionTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:layout_marginHorizontal="68dp"
            android:gravity="center"
            android:theme="@style/quaternary_title_h2"
            tools:text="questionTitle  --  0/0" />

        <ImageView
            android:id="@+id/resetButton"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/reset_icon"
            android:src="@drawable/ic_reload"
            app:tint="@color/quaternary"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_rounded_tertiary"
                android:padding="18dp">

                <TextView
                    android:id="@+id/questionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="questionText"
                    android:theme="@style/quaternary_title_h2"
                    android:gravity="center"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="8dp"/>

                <ImageView
                    android:id="@+id/questionImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/question_image_description"
                    tools:src="@drawable/img_abs_workout"
                    android:layout_marginHorizontal="24dp"
                    android:paddingVertical="40dp">
                </ImageView>

                <TextView
                    android:id="@+id/optionOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="12dp"
                    android:background="@drawable/bg_rounded_quaternary"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    tools:text="questionOption" />

                <TextView
                    android:id="@+id/optionTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="12dp"
                    android:padding="10dp"
                    tools:text="questionOption"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_rounded_quaternary"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/optionThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="12dp"
                    android:padding="10dp"
                    tools:text="questionOption"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_rounded_quaternary"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/optionFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="12dp"
                    android:padding="10dp"
                    tools:text="questionOption"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_rounded_quaternary"
                    android:gravity="center"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary"
                android:theme="@style/quaternary_title_h2"
                tools:text="confirmButton"
                app:cornerRadius="8dp"/>

    </LinearLayout>
</LinearLayout>